Fixes alignment on mobile

--- a/_includes/components/universal/ThumbPreview/styles.scss
+++ b/_includes/components/universal/ThumbPreview/styles.scss
@@ -27,7 +27,7 @@
 }
 
 .ThumbPreview-thumb {
-  padding: 2rem 0;
+  padding-bottom: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
